_assets/stylesheets/application.css.sass
//= require vendor/normalize
//= require_tree .
@import "_variables"

body
  background-color: $primary
  color: $text-color
  font-family: $font
  font-size: em(16)
  line-height: 2

a
  text-decoration: none

.button-primary
  @include transition(all 0.2s)
  background-color: $button
  display: inline-block
  line-height: 1

  &:hover
    background-color: darken($button, 5%)

  a
    border: 1px solid #A96161
    color: #FFF
    display: block
    font-size: em(16)
    margin: 5px
    padding: $margin $margin*2.5
    text-transform: uppercase

.button-video, .close-video
  @include transition(all .4s)
  @include position(absolute, $margin $margin 0 0)
  background-color: rgba(0, 0, 0, .45)
  color: #FFF
  display: block
  font-family: $font-alt
  line-height: 1
  padding: 13px $margin

  &:hover
    background-color: rgba($primary-highlight, .75)

.button-video
  @include media($tablet)
    @include position(relative, 0px 0px 0 0)
    display: inline-block
    margin:
      top: $margin*2
      bottom: $margin*2

  @include media($desktop)
    &.hide
      display: none

.close-video
  display: none
  z-index: 999

  &.show
    display: block

    @include media($tablet)
      @include position(absolute, $margin/2 $margin/2 0 0)
      margin: 0

.container
  @include outer-container

#site-header
  @include row
  padding-top: 54px

  nav
    @include position(fixed, 0px 0px 0 0px)
    background-color: $primary
    z-index: 999

    p
      @include fill-parent
      color: $primary-text
      display: none
      margin: 0
      padding: 11px 0
      text-align: center

      @include media($tablet)
        display: inline-block

    .icon-twitter, .icon-menu
      @include transition(all .4s)
      color: #FFF
      font-size: em(28)
      padding: 13px

      &:hover
        background-color: $primary-highlight

    .icon-menu
      display: none

      @include media($tablet)
        @include position(absolute, 0px 0 0 0px)
        display: inline

    .icon-twitter
      @include position(absolute, 0px 0px 0 0)

  ul
    list-style-type: none
    margin: 0
    padding: 0

    @include media($tablet)
      display: none

      &.show
        display: block

  li
    @include span-columns(2)
    display: inline-block
    font-size: em(14)
    line-height: 1

    &:nth-child(3)
      @include span-columns(4)

    @include media($tablet)
      @include fill-parent
      margin: 0

      &:first-child
        margin: 0

    a
      @include transition(all 0.4s)
      color: #FFF
      display: block
      padding: $margin 0
      text-align: center
      text-transform: uppercase

      &:hover
        background-color: $primary-highlight

footer
  color: $primary-text
  padding:
    top: $margin
    bottom: $margin * 2
  
  a
    color: #FFF

  p
    @include span-columns(8)
    @include shift(2)
    text-align: center
    margin:
      top: 0
      bottom: 0

.content, .content-alt, #tagline
  a
    color: $link

    &:hover
      color: $link-hover

    &:visited, &:active
      color: $link

      &:hover
        color: $link-hover

.content, .content-alt
  padding:
    left: $gutter
    right: $gutter

  h3
    font-size: em(18)
    font-weight: normal
    text-align: center
    text-transform: uppercase

    &:before, &:after
      content: " - "

.content
  background-color: #FFF

.content-alt
  background-color: $secondary

.jumbo
  @include fill-parent
  color: #BABDC0
  font-family: $font-alt
  font-size: em(48)
  margin:
    top: $margin*3
    bottom: $margin*4
  text-align: center
  text-transform: uppercase

  @include media($tablet)
    font-size: em(32)
    margin:
      top: $margin
      bottom: $margin

